[tool.poetry]
name = "kittygramme"
version = "0.1.0"
description = "A mini social for cat enthusiasts: add you pet's pic & some details, edit or delete; see all the registered users' cat pix too."
authors = ["Kirill Koovshinov <k.koovshinov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
djangorestframework = "^3.15.1"
django-stubs = "^4.2.7"
django-stubs-ext = "^4.2.7"
djangorestframework-stubs = "^3.14.5"
djoser = "^2.2.2"
gunicorn = "^21.2.0"
pillow = "^10.3.0"
psycopg2-binary = "^2.9.9"
pytest = "^8.1.1"
pytest-django = "^4.8.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
webcolors = "^1.13"
webcolors-stubs = "^0.0.3"
django-cleanup = "^8.1.0"
mypy = "^1.9.0"
mypy-extensions = "^1.0.0"
python-lsp-server = {extras = ["all"], version = "^1.11.0"}
python-lsp-black = "^2.0.0"
mypy-ls = "^0.5.1"
pyls-isort = "^0.2.2"
django-types = "^0.19.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
flake8-isort = "^6.1.1"
ruff = "^0.3.5"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
# known_django="django"
known_first_party = "cats"
no_lines_before = "LOCALFOLDER"
sections="FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
